infrastructure/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ui-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - dripcd
  rules:
    - host: dripcd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
